enum req_type {
	EMPTY	 	= 0;
	CT_CREATE	= 1;
	CT_DESTROY	= 2;

	CT_GET_STATE	= 3;
	CT_SPAWN	= 4;
}

message create_req {
}

message spawn_req {
	required string path		= 1;
	repeated string args		= 2;
}

message create_resp {
	required uint64	rid		= 1;
}

message state_resp {
	required uint32 state		= 1;
}

message rpc_request {
	required req_type	req	= 1;
	optional uint64		ct_rid	= 2;

	optional create_req	create	= 3;
	optional spawn_req	spawn	= 4;
}

message rpc_responce {
	required bool		success	= 1;

	optional create_resp	create	= 2;
	optional state_resp	state	= 3;
}
